// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<card> demo: > render [actions] correctly 1`] = `
<div data-v-da4ba0ec="" class="sd-card sd-card-size-medium sd-card-bordered sd:w-90">
  <!---->
  <div class="sd-card-cover">
    <div data-v-da4ba0ec="" class="sd:h-51 sd:overflow-hidden"><img data-v-da4ba0ec="" class="sd:w-full sd:-translate-y-5" alt="dessert" src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a20012a2d4d5b9db43dfc6a01fe508c0.png~tplv-uwbnlip3yd-webp.webp"></div>
  </div>
  <div class="sd-card-body">
    <div data-v-da4ba0ec="" class="sd-card-meta">
      <div class="sd-card-meta-content">
        <div class="sd-card-meta-title">Card Title</div>
        <div class="sd-card-meta-description">This is the description</div>
      </div>
      <div class="sd-card-meta-footer">
        <div class="sd-card-meta-avatar">
          <div data-v-da4ba0ec="" class="sd:flex sd:items-center sd:text-[#1d2129]">
            <div data-v-da4ba0ec="" style="width: 24px; height: 24px; font-size: 12px;" class="sd-avatar sd-avatar-circle sd:mr-2"><span class="sd-avatar-text"> A </span>
              <!--v-if-->
            </div><span data-v-da4ba0ec="" class="sd-typography">Username<!----><!--v-if--><!--v-if--><!--v-if--></span>
          </div>
        </div>
        <div class="sd-card-actions">
          <div class="sd-card-actions-right"><span class="sd-card-actions-item"><span data-v-da4ba0ec="" class="icon-hover"><svg data-v-da4ba0ec="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-thumb-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 17v26m35.17-21.394-5.948 18.697a1 1 0 0 1-.953.697H14V19h3l9.403-12.223a1 1 0 0 1 1.386-.196l2.535 1.87a6 6 0 0 1 2.044 6.974L31 19h9.265a2 2 0 0 1 1.906 2.606Z"></path></svg></span></span><span class="sd-card-actions-item"><span data-v-da4ba0ec="" class="icon-hover"><svg data-v-da4ba0ec="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-share-internal" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M40 35v6H8v-6m1.108-4c1.29-8.868 13.917-15.85 29.392-15.998M30 6l9 9-9 9"></path></svg></span></span><span class="sd-card-actions-item"><span data-v-da4ba0ec="" class="icon-hover"><svg data-v-da4ba0ec="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-more" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path fill="currentColor" stroke="none" d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path><path d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path></svg></span></span></div>
        </div>
      </div>
    </div>
    <div class="sd-card-actions">
      <div class="sd-card-actions-right"><span class="sd-card-actions-item"><span data-v-da4ba0ec="" class="icon-hover"><svg data-v-da4ba0ec="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-thumb-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 17v26m35.17-21.394-5.948 18.697a1 1 0 0 1-.953.697H14V19h3l9.403-12.223a1 1 0 0 1 1.386-.196l2.535 1.87a6 6 0 0 1 2.044 6.974L31 19h9.265a2 2 0 0 1 1.906 2.606Z"></path></svg></span></span><span class="sd-card-actions-item"><span data-v-da4ba0ec="" class="icon-hover"><svg data-v-da4ba0ec="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-share-internal" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M40 35v6H8v-6m1.108-4c1.29-8.868 13.917-15.85 29.392-15.998M30 6l9 9-9 9"></path></svg></span></span><span class="sd-card-actions-item"><span data-v-da4ba0ec="" class="icon-hover"><svg data-v-da4ba0ec="" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-more" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path fill="currentColor" stroke="none" d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path><path d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path></svg></span></span></div>
    </div>
  </div>
</div>
`;

exports[`<card> demo: > render [basic] correctly 1`] = `
<div class="sd:flex">
  <div class="sd-card sd-card-size-medium sd-card-bordered sd:w-90">
    <div class="sd-card-header">
      <div class="sd-card-header-title">SD Card</div>
      <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
          <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
        </a></div>
    </div>
    <!---->
    <div class="sd-card-body"> ByteDance's core product, Toutiao ("Headlines"), is a content platform in China and around the world. Toutiao started out as a news recommendation engine and gradually evolved into a platform delivering content in various formats.
      <!---->
    </div>
  </div>
</div>
`;

exports[`<card> demo: > render [bordered] correctly 1`] = `
<div class="sd:flex sd:w-full sd:box-border sd:p-10 sd:bg-(--color-fill-2)">
  <div class="sd-card sd-card-size-medium sd:w-90">
    <div class="sd-card-header">
      <div class="sd-card-header-title">SD Card</div>
      <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
          <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
        </a></div>
    </div>
    <!---->
    <div class="sd-card-body"> Card content <br> Card content
      <!---->
    </div>
  </div>
  <div class="sd-card sd-card-size-medium sd-card-hoverable sd:w-90 sd:ml-6">
    <div class="sd-card-header">
      <div class="sd-card-header-title">Hover me</div>
      <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
          <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
        </a></div>
    </div>
    <!---->
    <div class="sd-card-body"> Card content <br> Card content
      <!---->
    </div>
  </div>
</div>
`;

exports[`<card> demo: > render [content] correctly 1`] = `
<div class="sd-card sd-card-size-medium sd-card-bordered sd-card-hoverable sd:w-90 sd:mb-5">
  <!---->
  <!---->
  <div class="sd-card-body">
    <div class="sd:flex sd:items-center sd:justify-between"><span class="sd:flex sd:items-center sd:text-[#1d2129]"><div style="width: 28px; height: 28px; font-size: 14px;" class="sd-avatar sd-avatar-circle sd:mr-2 sd:bg-[#165dff]"><span class="sd-avatar-text"> A </span>
      <!--v-if-->
    </div><span class="sd-typography">Username<!----><!--v-if--><!--v-if--><!--v-if--></span></span><a class="sd-link sd-link-status-normal sd-link-hoverless">
      <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
    </a>
  </div>
  <!---->
</div>
</div>
`;

exports[`<card> demo: > render [grid] correctly 1`] = `
<div data-v-9cfe5307="" class="sd-card sd-card-size-medium sd:w-full">
  <!---->
  <!---->
  <div class="sd-card-body">
    <div data-v-9cfe5307="" class="sd-card-grid sd-card-grid-hoverable sd:w-[25%]">
      <div data-v-9cfe5307="" class="sd-card sd-card-size-medium card-demo">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a data-v-9cfe5307="" class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body">
          <p data-v-9cfe5307="" class="sd:m-0">Card allow to hover</p>
          <!---->
        </div>
      </div>
    </div>
    <div data-v-9cfe5307="" class="sd-card-grid sd:w-[25%]">
      <div data-v-9cfe5307="" class="sd-card sd-card-size-medium card-demo">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a data-v-9cfe5307="" class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body">
          <p data-v-9cfe5307="" class="sd:m-0">Card content</p>
          <!---->
        </div>
      </div>
    </div>
    <div data-v-9cfe5307="" class="sd-card-grid sd-card-grid-hoverable sd:w-[25%]">
      <div data-v-9cfe5307="" class="sd-card sd-card-size-medium card-demo">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a data-v-9cfe5307="" class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body">
          <p data-v-9cfe5307="" class="sd:m-0">Card allow to hover</p>
          <!---->
        </div>
      </div>
    </div>
    <div data-v-9cfe5307="" class="sd-card-grid sd:w-[25%]">
      <div data-v-9cfe5307="" class="sd-card sd-card-size-medium card-demo">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a data-v-9cfe5307="" class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body">
          <p data-v-9cfe5307="" class="sd:m-0">Card content</p>
          <!---->
        </div>
      </div>
    </div>
    <div data-v-9cfe5307="" class="sd-card-grid sd-card-grid-hoverable sd:w-[25%]">
      <div data-v-9cfe5307="" class="sd-card sd-card-size-medium card-demo">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a data-v-9cfe5307="" class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body">
          <p data-v-9cfe5307="" class="sd:m-0">Card allow to hover</p>
          <!---->
        </div>
      </div>
    </div>
    <div data-v-9cfe5307="" class="sd-card-grid sd:w-[25%]">
      <div data-v-9cfe5307="" class="sd-card sd-card-size-medium card-demo">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a data-v-9cfe5307="" class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body">
          <p data-v-9cfe5307="" class="sd:m-0">Card content</p>
          <!---->
        </div>
      </div>
    </div>
    <div data-v-9cfe5307="" class="sd-card-grid sd-card-grid-hoverable sd:w-[25%]">
      <div data-v-9cfe5307="" class="sd-card sd-card-size-medium card-demo">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a data-v-9cfe5307="" class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body">
          <p data-v-9cfe5307="" class="sd:m-0">Card allow to hover</p>
          <!---->
        </div>
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`<card> demo: > render [hoverable] correctly 1`] = `
<div data-v-d40b0b92="" class="sd:flex">
  <div data-v-d40b0b92="" class="sd-card sd-card-size-medium sd-card-bordered sd-card-hoverable sd:w-90">
    <div class="sd-card-header">
      <div class="sd-card-header-title">SD Card</div>
      <div class="sd-card-header-extra"><a data-v-d40b0b92="" class="sd-link sd-link-status-normal sd-link-hoverless">
          <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
        </a></div>
    </div>
    <!---->
    <div class="sd-card-body"> Card content <br data-v-d40b0b92=""> Card content
      <!---->
    </div>
  </div>
  <div data-v-d40b0b92="" class="sd-card sd-card-size-medium sd-card-bordered sd-card-hoverable card-demo">
    <div class="sd-card-header">
      <div class="sd-card-header-title">Custom hover style</div>
      <div class="sd-card-header-extra"><a data-v-d40b0b92="" class="sd-link sd-link-status-normal sd-link-hoverless">
          <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
        </a></div>
    </div>
    <!---->
    <div class="sd-card-body"> Card content <br data-v-d40b0b92=""> Card content
      <!---->
    </div>
  </div>
</div>
`;

exports[`<card> demo: > render [inner] correctly 1`] = `
<div class="sd-card sd-card-size-medium sd-card-bordered">
  <div class="sd-card-header">
    <div class="sd-card-header-title">SD Card</div>
    <!---->
  </div>
  <!---->
  <div class="sd-card-body">
    <div class="sd-card sd-card-size-medium sd-card-bordered sd:mb-5">
      <div class="sd-card-header">
        <div class="sd-card-header-title">Inner Card Title</div>
        <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
            <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
          </a></div>
      </div>
      <!---->
      <div class="sd-card-body"> Inner Card Content
        <!---->
      </div>
    </div>
    <div class="sd-card sd-card-size-medium sd-card-bordered">
      <div class="sd-card-header">
        <div class="sd-card-header-title">Inner Card Title</div>
        <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
            <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
          </a></div>
      </div>
      <!---->
      <div class="sd-card-body"> Inner Card Content
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`<card> demo: > render [meta] correctly 1`] = `
<div class="sd-card sd-card-size-medium sd-card-bordered sd-card-hoverable sd:w-90">
  <!---->
  <div class="sd-card-cover">
    <div class="sd:h-51 sd:overflow-hidden"><img class="sd:w-full sd:-translate-y-5" alt="dessert" src="https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/a20012a2d4d5b9db43dfc6a01fe508c0.png~tplv-uwbnlip3yd-webp.webp"></div>
  </div>
  <div class="sd-card-body">
    <div class="sd-card-meta">
      <div class="sd-card-meta-content">
        <div class="sd-card-meta-title">Card Title</div>
        <div class="sd-card-meta-description"> Card content <br> Card content </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`<card> demo: > render [row] correctly 1`] = `
<div class="sd:box-border sd:w-full sd:p-10 sd:bg-(--color-fill-2)">
  <div class="sd-row sd-row-align-start sd-row-justify-start sd:mb-5" style="margin-left: -10px; margin-right: -10px;">
    <div class="sd-col sd-col-8" style="padding-left: 10px; padding-right: 10px;">
      <div class="sd-card sd-card-size-medium sd:w-full">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body"> Card content
          <!---->
        </div>
      </div>
    </div>
    <div class="sd-col sd-col-8" style="padding-left: 10px; padding-right: 10px;">
      <div class="sd-card sd-card-size-medium sd:w-full">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body"> Card content
          <!---->
        </div>
      </div>
    </div>
    <div class="sd-col sd-col-8" style="padding-left: 10px; padding-right: 10px;">
      <div class="sd-card sd-card-size-medium sd:w-full">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body"> Card content
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div class="sd-row sd-row-align-start sd-row-justify-start" style="margin-left: -10px; margin-right: -10px;">
    <div class="sd-col sd-col-16" style="padding-left: 10px; padding-right: 10px;">
      <div class="sd-card sd-card-size-medium sd:w-full">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body"> Card content
          <!---->
        </div>
      </div>
    </div>
    <div class="sd-col sd-col-8" style="padding-left: 10px; padding-right: 10px;">
      <div class="sd-card sd-card-size-medium sd:w-full">
        <div class="sd-card-header">
          <div class="sd-card-header-title">SD Card</div>
          <div class="sd-card-header-extra"><a class="sd-link sd-link-status-normal sd-link-hoverless">
              <!--v-if--><span class="sd-link-content sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">More</span></span>
            </a></div>
        </div>
        <!---->
        <div class="sd-card-body"> Card content
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;
